# wave_eq_solver

./: .gitignore  CMakeLists.txt  README.md  sample_input.txt
include/: err.h  funcs.h  global.h  mesh.h  ndarray.h  param_reader.h  reader.h  solver.h
src/: final.cu  funcs.cpp  mesh.cpp  reader.cpp  solver.cpp  solver.cu  visualization_tool  wave_eq_solver.cpp
src2/: solver2.cpp
